<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ccffff">
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="#000"
        android:text="@string/notice"/>
    <Spinner android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>
    <TextView android:id="@+id/identity_notice"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/status"/>
    <Button android:id="@+id/startIdentify"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/start_identify"
        android:textSize="24sp"
        android:layout_gravity="center"/>

</LinearLayout>
